hopefully fix horizontal scroll on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,11 +6,11 @@
 }
 
 body {
-  height: 100vh;
   background: #1a1a1a;
   color: white;
   font-family: 'outfit';
   width: 100%;
+  max-width: 100%;
 }
 
 @media(max-width: 768px) {
